<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.gmail.xXAndrew28Xx</groupId>
  <artifactId>SkriptPackager2</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>SkriptPackager2</name>
  <url>http://maven.apache.org</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>

  <build>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory>src</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
      <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>${basedir}/src/main/resources/</directory>
                <includes>
                    <include>*.yml</include>
                    <include>*.sk</include>
                    <include>*.skqc</include>
                </includes>
      </resource>
    </resources>
    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.5.1</version>
        <configuration>
          <source>1.7</source>
          <target>1.7</target>
        </configuration>
      </plugin>
	    <plugin>
	    <groupId>org.apache.maven.plugins</groupId>
	    <artifactId>maven-jar-plugin</artifactId>
	    <version>2.6</version>
	    <configuration>
	        <finalName>SkriptPackager</finalName>
	        <forkCount>3</forkCount>
   			<reuseForks>true</reuseForks>
   			<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>         
			<skipTests>true</skipTests>          
	    </configuration>
	  </plugin>
	        
    </plugins>
    <pluginManagement>
    	<plugins>
    		<!--This plugin's configuration is used to store Eclipse m2e settings only. It has no influence on the Maven build itself.-->
    		<plugin>
    			<groupId>org.eclipse.m2e</groupId>
    			<artifactId>lifecycle-mapping</artifactId>
    			<version>1.0.0</version>
    			<configuration>
    				<lifecycleMappingMetadata>
    					<pluginExecutions>
    						<pluginExecution>
    							<pluginExecutionFilter>
    								<groupId>
    									org.apache.maven.plugins
    								</groupId>
    								<artifactId>
    									maven-compiler-plugin
    								</artifactId>
    								<versionRange>
    									[3.5.1,)
    								</versionRange>
    								<goals>
    									<goal>compile</goal>
    									<goal>testCompile</goal>
    								</goals>
    							</pluginExecutionFilter>
    							<action>
    								<ignore></ignore>
    							</action>
    						</pluginExecution>
    					</pluginExecutions>
    				</lifecycleMappingMetadata>
    			</configuration>
    		</plugin>
    	</plugins>
    </pluginManagement>
  </build>
  <repositories>
    <repository>
        <id>spigot-repo</id>
        <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
        <id>snapshots</id>
        <url>https://repository.apache.org/content/repositories/snapshots</url>
    </repository>
    <repository>
		<id>njol-repo</id>
		<url>http://maven.njol.ch/repo/</url>
	</repository>
</repositories>
<dependencies>
    <dependency>
           <groupId>org.spigotmc</groupId>
           <artifactId>spigot-api</artifactId>
           <version>1.8.8-R0.1-SNAPSHOT</version>
    </dependency>
    
    <dependency>
		<groupId>commons-lang</groupId>
		<artifactId>commons-lang</artifactId>
		<version>2.7-SNAPSHOT</version>
	</dependency>
     
    <dependency>
		<groupId>commons-io</groupId>
		<artifactId>commons-io</artifactId>
		<version>2.6-SNAPSHOT</version>
	</dependency>   
	
	<dependency>
		<groupId>ch.njol</groupId>
		<artifactId>skript</artifactId>
		<version>2.0.1</version>
		<scope>provided</scope>
	</dependency>
	
	<dependency>
		 <groupId>junit</groupId>
 		 <artifactId>junit</artifactId>
		 <version>4.12</version>
	</dependency>

</dependencies>
</project>
